# kotonoha

./: .depup  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
data/: accent_dict.csv
kotonoha/: Cargo.toml
kotonoha-cli/: Cargo.toml
kotonoha-cli/src/: main.rs
kotonoha-python/: Cargo.toml  pyproject.toml
kotonoha-python/src/: lib.rs
kotonoha/benches/: benchmark.rs
kotonoha/src/: accent.rs  accent_dict.rs  accent_rule.rs  crf.rs  label.rs  lib.rs  mora.rs  njd.rs  nn.rs  phoneme.rs  prosody.rs
kotonoha/tests/: accent_tests.rs  engine_tests.rs  integration_test.rs  label_tests.rs  mora_tests.rs  phoneme_tests.rs  prosody_tests.rs
scripts/: setup_dict.sh
training/: .env.example  README.md  convert_book.py  convert_corpus.py  diagnose_label_noise.py  generate_combined_corpus.py  generate_combined_corpus_v3.py  generate_recombined_data.py  main.py  pyproject.toml  train_onnx_v10.py  train_onnx_v11.py  train_onnx_v12.py  train_onnx_v13.py  train_onnx_v14.py  train_onnx_v16.py  train_onnx_v17.py  train_onnx_v18.py  train_onnx_v19.py  train_onnx_v20.py  train_onnx_v21.py  train_onnx_v22.py  train_onnx_v23.py  train_onnx_v24.py  train_onnx_v6.py  train_onnx_v7.py  train_onnx_v8.py  train_onnx_v9.py
