[workspace]
members = ["kotonoha", "kotonoha-python", "kotonoha-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Yohei"]

[workspace.dependencies]
kotonoha = { path = "kotonoha" }
hasami = { path = "../hasami" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
csv = "1.4.0"
thiserror = "2.0.18"
rayon = "1.11.0"
once_cell = "1.21.4"
encoding_rs = "0.8.35"
glob = "0.3.3"
memmap2 = "0.9.10"
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
