[package]
name = "kotonoha-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Python bindings for kotonoha Japanese prosody engine"

[lib]
name = "kotonoha"
crate-type = ["cdylib"]

[features]
default = []
cuda = ["kotonoha/cuda"]

[dependencies]
kotonoha = { workspace = true }
hasami = { workspace = true }
pyo3 = { workspace = true }
