[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kotonoha"
version = "0.1.0"
description = "Japanese prosody engine for TTS (Text-to-Speech)"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yohei" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.optional-dependencies]
cuda = []

[tool.maturin]
features = ["pyo3/extension-module", "cuda"]
module-name = "kotonoha"
